--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@
   @media (min-width: 992px) {
     #mainNav {
       border: none;
-      background-color: transparent;
     }
     #mainNav .navbar-brand {
       font-size: 1.75em;
@@ -193,10 +192,10 @@ header.mainhead .introduction-text {
     header.mainhead .introduction-text .icons .push-social li a i {
       color: white;
     }
-    header.mainhead .introduction-text .icons .push-social {
-      /* margin-top: 50px; */
-      /* text-align: start; */
-    }
+    /* header.mainhead .introduction-text .icons .push-social {
+      margin-top: 50px;
+      text-align: start;
+    } */
   }
 
   /* Portfolio section */
@@ -289,7 +288,7 @@ header.mainhead .introduction-text {
     footer.footer {
       padding-top: 64px;
       padding-bottom: 64px;
-      background-color: #2D3666 !important;
+      background-color: black !important;
       font-family: 'Open Sans', sans-serif;
     }
     footer.footer a {
