--- a/css/style.css
+++ b/css/style.css
@@ -262,14 +262,14 @@ header.mainhead .introduction-text {
     #portfolio .portfolio-item {
       margin-top: 30px;
     }
-    /* #portfolio .portfolio-item .portfolio-link img {
-      transition: all 0.3s ease-in-out;
+    #portfolio .portfolio-item .portfolio-link img {
+      transition: all 0.5s ease-in-out;
     }
     #portfolio .portfolio-item .portfolio-link img:hover {
       transform: scale(1.2);
-      box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.12);
+      box-shadow: 0px 5px rgba(0, 0, 0, 0.02);
       z-index: 100;
-    } */
+    }
     header.mainhead .introduction-text .icons .push-social li {
       list-style: none;
       display: inline !important;
@@ -288,7 +288,7 @@ header.mainhead .introduction-text {
     footer.footer {
       padding-top: 64px;
       padding-bottom: 64px;
-      background-color: black !important;
+      background-color: black;
       font-family: 'Open Sans', sans-serif;
     }
     footer.footer a {
@@ -297,5 +297,5 @@ header.mainhead .introduction-text {
     }
     footer.footer a:hover {
       text-decoration: none;
-    }    
+    }   
   }
